clusters/on-prem-cluster/apps/media/calibre-web/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: calibre-web
  namespace: media
  labels:
    app: calibre-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: calibre-web
  template:
    metadata:
      labels:
        app: calibre-web
    spec:
      containers:
      - name: calibre-web
        image: lscr.io/linuxserver/calibre-web:latest
        ports:
        - containerPort: 8083
        volumeMounts:
          - name: config
            mountPath: /config
          - name: books
            mountPath: /books
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: calibre-web-pvc
        - name: books
          hostPath:
            path: /mnt/media/books
            type: DirectoryOrCreate
